--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,45 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node modules
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Output de produção do Next.js
+.next/
+out/
 
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Arquivos de log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Arquivos de sistema
+.DS_Store
+Thumbs.db
 
-# vercel
-.vercel
+# Arquivos de ambiente
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Cache do pacote
+.package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Diretório de build (caso use export)
+build/
+
+# Arquivos do Vercel (caso use)
+.vercel/
+
+# Arquivos de coverage (testes)
+coverage/
+
+# Arquivos do editor
+.vscode/
+.idea/
+
+# Arquivos temporários
+*.swp
+*.swo
